Fix auth tooltip on mobile

--- a/src/css/media.less
+++ b/src/css/media.less
@@ -517,8 +517,11 @@
       padding: 24px;
     }
 
-    &-row {
-      flex-wrap: wrap;
+ 
+    &-form {
+      &__row {
+        flex-wrap: wrap;
+      }
     }
     &-section {
       margin-top: 0;
